--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,27 @@
-body { 
-    background-color:black ;
-    font-family: Bai Jamjuree;
-
+body {
+    background-color: bisque;
 }
+
+
 footer{
     background-color: black;
-    color: aliceblue;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
+    position: fixed
+    bottom: 0
+    width: 100%
+    height:2rem;
 }
 footer p{
-    text-align:center;
+    text-align: center;
     font-size: 1rem;
-    margin-top: 0.5rem;
+    margin-top: 0,5rem;
+}
+#container{
+display: flex;
+}
+.cartao{
+    margin: 1rem 1rem;
+    background-color: blueviolet;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33%-6rem);
 }
